manifests/workloads/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-app
  labels:
    app: user-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-app
  template:
    metadata:
      labels:
        app: user-app
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8080"
        prometheus.io/path: "/actuator/prometheus"
    spec:
      containers:
        - image: imalouhov/prometheus-homework:0.0.1
          name: user-app-pod
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
