manifests/workloads/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-app
  labels:
    app: user-app
spec:
  type: LoadBalancer
  selector:
    app: user-app
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
