manifests/workloads/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-app
spec:
  #  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: user-app
                port:
                  number: 8080
